--- a/Subtitle.Downloader.Tests/packages.config
+++ b/Subtitle.Downloader.Tests/packages.config
@@ -3,6 +3,8 @@
 <packages>
   <package id="FluentAssertions" version="2.1.0.0" targetFramework="net45" />
   <package id="NSubstitute" version="1.6.1.0" targetFramework="net45" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net45" />
   <package id="System.IO.Abstractions" version="1.4.0.72" targetFramework="net45" />
   <package id="System.IO.Abstractions.TestingHelpers" version="1.4.0.72" targetFramework="net45" />
 </packages>
