--- a/Subtitle.Provider.Addic7ed.Tests/packages.config
+++ b/Subtitle.Provider.Addic7ed.Tests/packages.config
@@ -4,5 +4,7 @@
   <package id="FluentAssertions" version="2.1.0.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="NSubstitute" version="1.6.1.0" targetFramework="net45" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net45" />
   <package id="ScrapySharp" version="2.2.63" targetFramework="net45" />
 </packages>
