--- a/Subtitle.Downloader.Tests/Subtitle.Downloader.Tests.csproj
+++ b/Subtitle.Downloader.Tests/Subtitle.Downloader.Tests.csproj
@@ -91,6 +91,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="MockUnixSupport.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
